--- a/app/src/main/res/layout/videobuffer.xml
+++ b/app/src/main/res/layout/videobuffer.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent">
+
+    <include layout="@layout/toolbar"/>
 
     <io.vov.vitamio.widget.CenterLayout
         android:layout_width="match_parent"
@@ -16,10 +18,21 @@
             android:layout_centerVertical="true"/>
     </io.vov.vitamio.widget.CenterLayout>
 
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+    </LinearLayout>
+
+
+
+
     <LinearLayout
         android:layout_width="150dp"
         android:layout_height="60dp"
-        android:layout_centerInParent="true"
+        android:layout_gravity="center"
         android:orientation="vertical">
 
         <ProgressBar
@@ -50,4 +63,4 @@
     </LinearLayout>
 
 
-</RelativeLayout>
+</FrameLayout>
