--- a/app/src/main/res/layout/ac_fragment_content_reply.xml
+++ b/app/src/main/res/layout/ac_fragment_content_reply.xml
@@ -1,94 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView
+<android.support.v7.widget.RecyclerView
+    android:id="@+id/ac_fragment_content_reply_recycler_view"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:clipToPadding="false"
+    android:paddingBottom="@dimen/recycle_view_bottom"
+    android:paddingLeft="@dimen/recycle_view_margin"
+    android:paddingRight="@dimen/recycle_view_margin">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:paddingTop="24dp">
-
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Info"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="fdsfasd_fadlsfjkdasjffdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumlsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsum"/>
-
-            </LinearLayout>
-
-        </android.support.v7.widget.CardView>
-
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            >
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Friends"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="fdsfasd_fadlsfjkdasjffdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumlsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsum"/>
-
-            </LinearLayout>
-
-        </android.support.v7.widget.CardView>
-
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            >
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Related"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="fdsfasd_fadlsfjkdasjffdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumlsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsumfdsfasd_fadlsfjkdasjflsadjfipsum"/>
-
-            </LinearLayout>
-
-        </android.support.v7.widget.CardView>
-
-    </LinearLayout>
-
-</android.support.v4.widget.NestedScrollView>
+</android.support.v7.widget.RecyclerView>
