--- a/app/src/main/res/layout/ac_recycleview_item_cardview_content_reply.xml
+++ b/app/src/main/res/layout/ac_recycleview_item_cardview_content_reply.xml
@@ -65,6 +65,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
+                android:textColor="@color/gray"
                 android:textSize="14sp"/>
 
         </LinearLayout>
