--- a/app/src/main/res/layout/ac_recycleview_recommend_viewpager.xml
+++ b/app/src/main/res/layout/ac_recycleview_recommend_viewpager.xml
@@ -5,6 +5,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="170dp"
+    android:clickable="true"
+    android:foreground="?selectableItemBackground"
     app:cardCornerRadius="@dimen/shape">
 
     <android.support.v4.view.ViewPager
