--- a/app/src/main/res/layout/ac_fragment_main_recommend.xml
+++ b/app/src/main/res/layout/ac_fragment_main_recommend.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.SwipeRefreshLayout
+<org.succlz123.AxBTube.support.widget.FixSwipeRefreshLayout
     android:id="@+id/swipe_fresh_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -19,5 +19,5 @@
 
     </android.support.v7.widget.RecyclerView>
 
-</android.support.v4.widget.SwipeRefreshLayout>
+</org.succlz123.AxBTube.support.widget.FixSwipeRefreshLayout>
 
